# CodePuzzles

./: .gitignore  CMakeLists.txt  README.md
cpp/: CMakeLists.txt  README.md
cpp/puzzles/: CMakeLists.txt
cpp/puzzles/battledev_mar2015/1_annees/: CMakeLists.txt  main.cpp
cpp/puzzles/battledev_mar2015/2_mdp/: CMakeLists.txt  main.cpp
cpp/puzzles/battledev_mar2015/3_facteur/: CMakeLists.txt  main.cpp
cpp/puzzles/battledev_mar2015/3_facteur/data/: input2.txt
cpp/puzzles/battledev_mar2015/4_bataille/: CMakeLists.txt  main.cpp
cpp/puzzles/battledev_mar2015/5_notation/: CMakeLists.txt  main.cpp
cpp/puzzles/battledev_mar2015/6_carre/: CMakeLists.txt  main.cpp
cpp/puzzles/battledev_mar2017/1_recrutement/: CMakeLists.txt  main.cpp
cpp/puzzles/battledev_mar2017/2_jeux/: CMakeLists.txt  main.cpp
cpp/puzzles/battledev_mar2017/3_plateformes/: CMakeLists.txt  main.cpp
cpp/puzzles/battledev_mar2017/4_combat/: CMakeLists.txt  main.cpp
cpp/puzzles/battledev_mar2017/5_prise/: CMakeLists.txt  main.cpp
cpp/puzzles/battledev_mar2017/6_foire/: CMakeLists.txt  main.cpp
cpp/puzzles/battledev_nov2015/1_moyenne/: CMakeLists.txt  main.cpp
cpp/puzzles/battledev_nov2015/2_tv/: CMakeLists.txt  main.cpp
cpp/puzzles/battledev_nov2015/3_scrabble/: CMakeLists.txt  main.cpp
cpp/puzzles/battledev_nov2015/4_logigraphes/: CMakeLists.txt  main.cpp
cpp/puzzles/battledev_nov2015/5_ronronnement/: CMakeLists.txt  main.cpp
cpp/puzzles/battledev_nov2015/6_centrale/: CMakeLists.txt  main.cpp
cpp/puzzles/battledev_nov2017/1/: CMakeLists.txt  main.cpp
cpp/puzzles/battledev_nov2017/2/: CMakeLists.txt  main.cpp
cpp/puzzles/battledev_nov2017/3/: CMakeLists.txt  main.cpp
cpp/puzzles/battledev_nov2017/4/: CMakeLists.txt  main.cpp
cpp/puzzles/battledev_nov2017/5/: CMakeLists.txt  main.cpp
cpp/puzzles/battledev_nov2017/6/: CMakeLists.txt  main.cpp
cpp/puzzles/battledev_template/: CMakeLists.txt  main.cpp
cpp/puzzles/codinggame_classic/MarsLander1/: CMakeLists.txt  main.cpp
cpp/puzzles/codinggame_classic/MarsLander2/: CMakeLists.txt  main.cpp
cpp/puzzles/codinggame_classic/NintendoSponsoredContest/: CMakeLists.txt  main.cpp
cpp/puzzles/codinggame_classic/WinamaxSponsoredContest/: CMakeLists.txt  main.cpp
cpp/puzzles/codinggame_community/: CMakeLists.txt
cpp/puzzles/codinggame_community/TheFastest/: CMakeLists.txt  Solution.cs
cpp/puzzles/codinggame_community/ticket_to_ride_europe/: CMakeLists.txt  main.cpp
cpp/scripts/: ConfigureFiles.cmake  SubDirList.cmake
cpp/validation/: CMakeLists.txt  Validator.cpp  Validator.h
(+164 files in other folders)
